syntax = "proto3";

package sms;

option go_package = "tycoon.systems/tycoon-services;tycoon_services";

/* Methods that must be consumed by Node.js must start with lowercase.
Methods that must be consumed by Go must start with uppercase. */

service smsManagement {
    rpc CreateNewSmsBlast (NewMsg) returns (Msg) {}
    rpc returnSmsJobResult (Msg) returns (Msg) {}
    rpc GetGraphqlValidMasterLogin(Msg) returns (Msg) {}

}

message NewMsg {
    string      DomainKey = 1;
    string      From = 2;
    string      Content = 3;
    string      Username = 4;
    string      Identifier = 5;
    string      Hash = 6;
}

message Msg {
    string      From = 1;
    string      Domain = 2;
    string      Content = 3;
    string      JobId = 4;
}
